# Solana-Ticket-Machine

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs  ticket.rs  ticket_buying.rs  util.rs
program/: Cargo.toml  program-id.md
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
script/: main.js  package.json  tsconfig.json
script/src/: index.ts  math.ts
