[package]
name = "ticket_finder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.7.10"
solana-sdk = "1.7.10"
base64 ="0.13.0"
arrayref = "0.3.6"
solana-account-decoder = "1.7.11"
bs58 = "0.4.0"
solana-program = "=1.7.11"